FEM Time Tracking Dashboard : fix layout issue on tracker

--- a/fem--time-tracking-dashboard/src/css/_tracker.css
+++ b/fem--time-tracking-dashboard/src/css/_tracker.css
@@ -105,6 +105,11 @@
 
 @supports (display: grid) {
     .tracker {
+        display: flex;
         margin-top: 0;
+    }
+
+    .tracker__inner {
+        flex: 1 1 100%;
     }
 }
